--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "student-management-app",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://SeungyeopHyun.github.io/SeungyeopHyun.github.io",
   "dependencies": {
     "axios": "^0.21.1",
     "mssql": "^11.0.1",
@@ -13,9 +14,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "gh-pages": "^6.3.0",
     "vite": "^6.2.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
