--- a/vite.config
+++ b/vite.config
@@ -2,9 +2,9 @@ import { defineConfig } from 'vite';
 import react from '@vitejs/plugin-react';
 
 export default defineConfig({
+  base: "/SeungyeopHyun.github.io/",
   plugins: [react()],
-  base: "./",
   server: {
-    port: 3000
-  }
+    port: 3000
+  }
 });
